Bug fix: overflow effect.

--- a/feedback.css
+++ b/feedback.css
@@ -10,10 +10,10 @@ main .logo {
 
 .card {
     background: #B49646;
-    width: 18rem;
+    width: 17rem;
     flex-shrink: 0;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    margin-left: 0.2rem;
+    margin-right: 0.2rem;
 }
 
 .card-title,
@@ -34,7 +34,7 @@ img {
     margin-top: 1rem;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
     .cards {
         margin-top: 5rem;
         overflow-x: hidden;
